--- a/themes/pagedjs/assets/css/page/homepage.css
+++ b/themes/pagedjs/assets/css/page/homepage.css
@@ -1,5 +1,4 @@
 .homepage {
-  overflow-y: scroll;
 }
 
 .homepage main {
